Use markdown for README

--- a/README
+++ b/README
@@ -1,6 +1,6 @@
-M A K E M A K E
+# MAKEMAKE
 
-makemake.py is a Python-2.7 script  which generates Makefiles for modular Fortran
-programs.  It recursively  searches  the  working directory  for  .f90 files  and
-determines  their  dependencies.  Compiler  preferences are  inherited  from  the
+makemake.py is a Python script that generates Makefiles for modular Fortran
+programs. It recursively searches the working directory for .f90 files and
+determines their dependencies. Compiler preferences are inherited from the
 existing Makefile.
