--- a/logo/logo.tex
+++ b/logo/logo.tex
@@ -5,6 +5,8 @@
 \begin{document}
 \begin{tikzpicture}[draw=white, line width=6mm, line join=miter, line cap=butt]
 \fill[black] (0,0) rectangle (19,11);
+\draw[draw=orange, line width=3mm] (6,5) arc(360:0:0.5)--(6,4) arc(360:180:0.5);
+\draw[draw=orange, line width=3mm] (7.5,4) arc(360:180:0.5)--(6.5,5) arc(180:0:0.5)--cycle;
 \draw (1,1)--(2,5)--(3,3)--(4,5)--(5,1);
 \draw (6,1)--(8,5)--(10,1) (7,3)--(9,3);
 \draw (18,1)--(15,1)--(15,5)--(18,5) (15,3)--(17,3);
